syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.amsidh.mvc.model";

message ProductRequest {
  int32 id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
}

// User-defined message types
message ProductIdRequest {
  int32 id = 1;
}

message AllProductsResponse{
  repeated ProductResponse product_response = 1;
}

message NoParam{

}

